localisation + soc missions + breakup of tree

--- a/localisation/IRE_l_english.yml
+++ b/localisation/IRE_l_english.yml
@@ -327,31 +327,55 @@
   IRE_civilwar_events.1.t: "Government Support Dropping!"
   IRE_civilwar_events.1.desc: "The nationalists are slowly winning the people over..."
   IRE_civilwar_events.1.a: "This is concerning"
-
   IRE_civilwar_events.2.t: "Munster Secured"
   IRE_civilwar_events.2.desc: "With Munster firmly under our control. we are on more step towards our goal."
   IRE_civilwar_events.2.a: "Excellent. onwards!"
-
   IRE_civilwar_events.3.t: "Connanaugnt Secured"
   IRE_civilwar_events.3.desc: "With Rural Ireland Rallied Together, The Metropolitans do not stand a chance. we are in a good negotionaing Position"
   IRE_civilwar_events.3.a: "Excellent. It is Inevtiable."
-
   IRE_civilwar_events.4.t: "PM Assinated"
   IRE_civilwar_events.4.desc: "Following a successful plot on our Taoiseach, The Republic has never been weaker. Nationalists are moving on the Capital. the fate of the republic hangs in the balance"
   IRE_civilwar_events.4.a: "Nationalist Militias hand the government over to sinn fein"
   IRE_civilwar_events.4.b: "The 'RA should take direct control for the coming fight"
   IRE_civilwar_events.4.c: "Now is not the time"
-
   IRE_civilwar_events.5.t: "The Republic has Fallen into Conflict"
   IRE_civilwar_events.5.desc: "Nationalists have made moves. securing rural Ireland. they are preparing to move on dublin to collapse the republic. "
   IRE_civilwar_events.5.a: "The 'Ra Mobilises, and declares open armed rebellion"
-
   IRE_civilwar_events.6.t: "Sporadic Violence sweeps the nation"
   IRE_civilwar_events.6.desc: "Random riots. and acts of sectarian Violence. With both law enforcement, and the gangs refusing the back down. this has escalated into a staate of emergency, the troubles have finally exploded. "
   IRE_civilwar_events.6.a: "The 'RA Mobilise to meet the esclation. This means war."
   IRE_civilwar_events.7.t: "Transfer the Civilian Administration to Gerry Adams. "
   IRE_civilwar_events.7.desc: "A power agreement has been agreed between the 'Ra Interim Government and the Sinn Fein Party. where Gerry Adams would take up Taoiseach and lead the Dáil Éireann. While the 'RA and republican Loyalists/Academics will run the Seanad Éireann as a Technocratic Chamber, under Ceannaire Billy McKee, mostly in an advisory role. for military control"
   IRE_civilwar_events.7.a: "Gerry Adams Forms Majority Government with other Nationalist Factions"
+  IRE_civilwar_events.8.t: "Status Report on the struggle"
+  IRE_civilwar_events.8.desc: "Thanks to friends we have in the state apparatus, we have a clear picture of what we are getting away with. and what is provoking them"
+  IRE_civilwar_events.8.a: "Vital intel. We need to be more careful"
+
+
+  IRE_socialist_civilwar_events.1.t: "Clash with ICA Counter Protestors"
+  IRE_socialist_civilwar_events.1.desc: "We are faced with resistance from fellow socialists. do we handle this 1930's style, or with arguement?"
+  IRE_socialist_civilwar_events.1.a: "Might is the ultimate form of democracy"
+  IRE_socialist_civilwar_events.1.b: "Lets be the bigger men."
+
+  IRE_socialist_civilwar_events.2.t: "ICA Counter Protestors back down"
+  IRE_socialist_civilwar_events.2.desc: "TODO"
+  IRE_socialist_civilwar_events.2.a: "heh, cowards."
+
+  IRE_socialist_civilwar_events.3.t: "Meeting with socialist Leaders"
+  IRE_socialist_civilwar_events.3.desc: "Our brawl began a dialogue, we did not disagree on much when it came down to it, \n they offered their support, on the premise of the new republic becoming socialist. their support would greatl weaken the current government. "
+  IRE_socialist_civilwar_events.3.a: "Lets make the Deal, for the sake of ireland."
+  IRE_socialist_civilwar_events.3.b: "Storm out."
+  
+  IRE_socialist_civilwar_events.3.t: "Socialists ignore calls for consolidation"
+  IRE_socialist_civilwar_events.3.desc: "It seems they have still not forgiven us for that brawl. we must keep trying. they would make good allies."
+  IRE_socialist_civilwar_events.3.a: "What else must we do. "
+
+  IRE_socialist_civilwar_events.5.t: "Fate of our first conference"
+  IRE_socialist_civilwar_events.5.desc: "with all members of our movement voicing their ideals, and ideas, we can try to move forward with what we stand for economically, and socially. this will decide future paths. "
+  IRE_socialist_civilwar_events.5.a: "well, we are radicals, always have been"
+  IRE_socialist_civilwar_events.5.b: "marxism. and marxism only."
+  IRE_socialist_civilwar_events.5.c: "social nationalists, the sinn fein way"
+  IRE_socialist_civilwar_events.5.d: "ack, the socialism stuff is yesterday, we need to focus on nationalism."
 
 ## boring shit no one gaf about
 # Freedom
@@ -444,7 +468,7 @@ IRE_Foreign_Policy:0 "Foreign Policy"
 IRE_Recruit_more_Diplomats:0 "Recruit more Diplomats"
 IRE_International_Alliances:0 "International Alliances"
  
-IRE_Isolationism:0 "Isolationism"
+IRE_isolationism:0 "Isolationism"
 IRE_Reduce_Foreign_Influence:0 "Reduce Foreign Influence"
 IRE_Defensive_Constructions:0 "Defensive Constructions"
  
@@ -452,70 +476,70 @@ IRE_Interventionism:0 "Interventionism"
 IRE_Volunteer_Corps:0 "Volunteer Corps"
 IRE_Political_Influence_Abroad:0 "Political Influence Abroad"
 
-IREGEN_Invite_European_Investors:0 "Invite European Investors"
-IREGEN_Invite_European_Investors_desc:0 ""
-IREGEN_european_administrators:0 "Request European Administrators"
-IREGEN_european_administrators_desc:0 ""
-IREGEN_European_Technology_exchanges:0 "European Technology Exchanges"
-IREGEN_European_Technology_exchanges_desc:0 ""
-IREGEN_Invite_european_banks:0 "Invite European Banks"
-IREGEN_Invite_european_banks_desc:0 ""
-IREGEN_european_auto_industry:0 "European Auto-Industry"
-IREGEN_european_auto_industry_desc:0 ""
-IREGEN_european_high_speed_rail:0 "Invest in European High-Speed Rail"
-IREGEN_european_high_speed_rail_desc:0 ""
-IREGEN_a_new_economy_for_a_new_millenium:0 "A New Economy For A New Millenium"
-IREGEN_a_new_economy_for_a_new_millenium_desc:0 "The new millennium has begun. Other countries have started to modernise. And so must we! We'll start a program of modernising our industry and making it suitable for the changing times."
-IREGEN_domestic_industry:0 "Domestic Focus"
-IREGEN_domestic_industry_desc:0 ""
-IREGEN_free_market_based_economy:0 "Free Market Based Economy"
-IREGEN_a_free_market_economy:0 "A Free Market Economy"
-IREGEN_a_free_market_economy_desc:0 "An economy which is based on free market rules is clearly better than a centrally planned economy as it costs much and will lead to failure. Thus we will make a great and free economy! "
-IREGEN_invite_foreign_investors:0 "Invite Foreign Investors"
-IREGEN_invite_foreign_investors_desc:0 "Our economy is underdeveloped. To develop our economy without much cost, we can support foreign firms that want to start their business in our nation."
-IREGEN_foreign_arms_manufacturers:0 "Foreign Arms Manufacturers"
-IREGEN_foreign_arms_manufacturers_desc:0 "We do not have a large military industry, and we are mostly buying our weapons from other nations. That costs a lot of money which we don't want to waste. To fix this we will invite arms manufacturers from other nations to create weapons in our nation."
-IREGEN_free_trade:0 "Free Trade"
-IREGEN_free_trade_desc:0 "To have a free economy, we also must have free trade. This is to expand what we export and import."
-IREGEN_anti_monopoly_laws:0 "Anti-Monopoly Laws"
-IREGEN_anti_monopoly_laws_desc:0 "No matter on which side is liberalism, conservative or even communist, we can all agree that monopolies don't bring anything good for the people and for our nation as well. Let's make some laws that will stop monopolies from gaining even more power. "
-IREGEN_sell_goverment_shares_in_companies:0 "Privatisation"
-IREGEN_sell_goverment_shares_in_companies_desc:0 "Now that our economy is stable, we can start focusing on earning money and freeing the market at the same time. To do this we will sell shares in companies we own to some random people."
-IREGEN_sold_shares:0 "Sold Shares"
-IREGEN_the_teachings_of_the_austrain_shcool:0 "Teachings Of The Austrian School"
-IREGEN_the_Austrian_school:0 "The Austrian School"
-IREGEN_the_Austrian_school_desc:0 "The Austrian school believes in a truly free market which direction that we are going in right now. Let's just learn from their teachings and apply them to our economy. "
-IREGEN_Institutional_economic_school:0 "The Institutional School"
-IREGEN_Institutional_economic_school_desc:0 "The Austrian school is outdated. We must go with the modern ways of institutionalist economic school and implement its policies into our economy."
-IREGEN_the_teachings_of_the_Institutional_shcool:0 "Teachings Of The Institutional School"
-IREGEN_centraly_planned_economy:0 "Centrally Planned Economy"
-IREGEN_centraly_planned_economy_desc:0 "It's clear that an economy based on freedom will lead to failure and rule of corporations. Thus the only logical option left is to create an economy that would be totally controlled by the government. "
-IREGEN_economy_central_planned:0 "Centrally Planned Economy"
-IREGEN_increase_investments_over_industry:0 "State Monopolies"
-IREGEN_increase_investments_over_industry_desc:0 "As we have chosen to go with a centrally planned economy, we must take care of investing in and expanding our industry. So let's spend more money on further expanding our industry."
-IREGEN_export_arms_industry:0 "Export Oriented Arms Industry"
-IREGEN_export_arms_industry_desc:0 ""
-IREGEN_state_owned_armories:0 "State-Owned Armouries"
-IREGEN_state_owned_armories_desc:0 "We have already invested in the growth of our economy, but we cannot forget about the military industry. We'll start funding construction of new military factories that will be owned directly by our nation. "
-IREGEN_funding_public_schools:0 "Funding Public Schools"
-IREGEN_fund_public_schools:0 "Fund Public Schools"
-IREGEN_fund_public_schools_desc:0 "Education is a powerful tool. It gives us more experts, allows us to spread more of our propaganda. It's generally great. However many public schools in our country lack funding. Thus to have more educated population we have to spend more money on our education system."
-IREGEN_fill_the_road_gaps:0 "Fill The Road Gaps"
+IRE_Invite_European_Investors:0 "Invite European Investors"
+IRE_Invite_European_Investors_desc:0 ""
+IRE_european_administrators:0 "Request European Administrators"
+IRE_european_administrators_desc:0 ""
+IRE_European_Technology_exchanges:0 "European Technology Exchanges"
+IRE_European_Technology_exchanges_desc:0 ""
+IRE_Invite_european_banks:0 "Invite European Banks"
+IRE_Invite_european_banks_desc:0 ""
+IRE_european_auto_industry:0 "European Auto-Industry"
+IRE_european_auto_industry_desc:0 ""
+IRE_european_high_speed_rail:0 "Invest in European High-Speed Rail"
+IRE_european_high_speed_rail_desc:0 ""
+IRE_a_new_economy_for_a_new_millenium:0 "A New Economy For A New Millenium"
+IRE_a_new_economy_for_a_new_millenium_desc:0 "The new millennium has begun. Other countries have started to modernise. And so must we! We'll start a program of modernising our industry and making it suitable for the changing times."
+IRE_domestic_industry:0 "Domestic Focus"
+IRE_domestic_industry_desc:0 ""
+IRE_free_market_based_economy:0 "Free Market Based Economy"
+IRE_a_free_market_economy:0 "A Free Market Economy"
+IRE_a_free_market_economy_desc:0 "An economy which is based on free market rules is clearly better than a centrally planned economy as it costs much and will lead to failure. Thus we will make a great and free economy! "
+IRE_invite_foreign_investors:0 "Invite Foreign Investors"
+IRE_invite_foreign_investors_desc:0 "Our economy is underdeveloped. To develop our economy without much cost, we can support foreign firms that want to start their business in our nation."
+IRE_foreign_arms_manufacturers:0 "Foreign Arms Manufacturers"
+IRE_foreign_arms_manufacturers_desc:0 "We do not have a large military industry, and we are mostly buying our weapons from other nations. That costs a lot of money which we don't want to waste. To fix this we will invite arms manufacturers from other nations to create weapons in our nation."
+IRE_free_trade:0 "Free Trade"
+IRE_free_trade_desc:0 "To have a free economy, we also must have free trade. This is to expand what we export and import."
+IRE_anti_monopoly_laws:0 "Anti-Monopoly Laws"
+IRE_anti_monopoly_laws_desc:0 "No matter on which side is liberalism, conservative or even communist, we can all agree that monopolies don't bring anything good for the people and for our nation as well. Let's make some laws that will stop monopolies from gaining even more power. "
+IRE_sell_goverment_shares_in_companies:0 "Privatisation"
+IRE_sell_goverment_shares_in_companies_desc:0 "Now that our economy is stable, we can start focusing on earning money and freeing the market at the same time. To do this we will sell shares in companies we own to some random people."
+IRE_sold_shares:0 "Sold Shares"
+IRE_the_teachings_of_the_austrain_shcool:0 "Teachings Of The Austrian School"
+IRE_the_Austrian_school:0 "The Austrian School"
+IRE_the_Austrian_school_desc:0 "The Austrian school believes in a truly free market which direction that we are going in right now. Let's just learn from their teachings and apply them to our economy. "
+IRE_Institutional_economic_school:0 "The Institutional School"
+IRE_Institutional_economic_school_desc:0 "The Austrian school is outdated. We must go with the modern ways of institutionalist economic school and implement its policies into our economy."
+IRE_the_teachings_of_the_Institutional_shcool:0 "Teachings Of The Institutional School"
+IRE_centraly_planned_economy:0 "Centrally Planned Economy"
+IRE_centraly_planned_economy_desc:0 "It's clear that an economy based on freedom will lead to failure and rule of corporations. Thus the only logical option left is to create an economy that would be totally controlled by the government. "
+IRE_economy_central_planned:0 "Centrally Planned Economy"
+IRE_increase_investments_over_industry:0 "State Monopolies"
+IRE_increase_investments_over_industry_desc:0 "As we have chosen to go with a centrally planned economy, we must take care of investing in and expanding our industry. So let's spend more money on further expanding our industry."
+IRE_export_arms_industry:0 "Export Oriented Arms Industry"
+IRE_export_arms_industry_desc:0 ""
+IRE_state_owned_armories:0 "State-Owned Armouries"
+IRE_state_owned_armories_desc:0 "We have already invested in the growth of our economy, but we cannot forget about the military industry. We'll start funding construction of new military factories that will be owned directly by our nation. "
+IRE_funding_public_schools:0 "Funding Public Schools"
+IRE_fund_public_schools:0 "Fund Public Schools"
+IRE_fund_public_schools_desc:0 "Education is a powerful tool. It gives us more experts, allows us to spread more of our propaganda. It's generally great. However many public schools in our country lack funding. Thus to have more educated population we have to spend more money on our education system."
+IRE_fill_the_road_gaps:0 "Fill The Road Gaps"
  GEN_fill_the_road_gaps_desc:0 "Many roads in our nation have holes in them which leads to many accidents, and it makes us look bad on the world stage. Thus we need to fill these gaps."
-IREGEN_encourage_urbanization:0 "Encourage Urbanisation"
-IREGEN_encourage_urbanization_desc:0 "Many people who live in the countryside want to go to big cities so they can earn more money and they work more effectively. Let's start a campaign to get even more people into our cities and expand them for the new people who will be there."
-IREGEN_automative_mines_idea:0 "Automotive Mines"
-IREGEN_automoative_mines:0 "Automotive Mines"
-IREGEN_automoative_mines_desc:0 "Miners might work very hard in mines, but automotive mines are even more 
-IREGEN_develop_consumer_goods_industry:0 "Develop Consumer Goods Industry"
-IREGEN_develop_consumer_goods_industry_desc:0 "Many products can be produced in our nation. So let's expand production of it."
-IREGEN_root_steel_works:0 "[Root.GetAdjective] Steel"
-IREGEN_root_steel_works_desc:0 "Have we digged the whole country looking for steel yet? No, so let's do it!"
-IREGEN_subside_our_farmers:0 "Subside Our Farmers"
-IREGEN_subside_our_farmers_desc:0 "Many of our farmers could use some help to expand their farms. If we did it, that would be great for the growth of the countryside."
-IREGEN_expand_university:0 "Fund The University Of [Root.Capital.GetName]"
-IREGEN_expand_university_desc:0 "To expand our research we must expand IREfunding of the [Root.Capital.GetName] university."
-IREGEN_housing_program:0 "Housing Program"
-IREGEN_housing_program_desc:0 "Many people in our country are too poor to be able to afford a house. To fix this we will make some cheap houses for these people. "
-IREGEN_modern_construction_methods:0 "Modern Construction Methods"
-IREGEN_modern_construction_methods_desc:0 "Our construction tools are mostly outdated. If we want to create a big and strong economy, we must invest in modernising our tools."
+IRE_encourage_urbanization:0 "Encourage Urbanisation"
+IRE_encourage_urbanization_desc:0 "Many people who live in the countryside want to go to big cities so they can earn more money and they work more effectively. Let's start a campaign to get even more people into our cities and expand them for the new people who will be there."
+IRE_automative_mines_idea:0 "Automotive Mines"
+IRE_automoative_mines:0 "Automotive Mines"
+IRE_automoative_mines_desc:0 "Miners might work very hard in mines, but automotive mines are even more 
+IRE_develop_consumer_goods_industry:0 "Develop Consumer Goods Industry"
+IRE_develop_consumer_goods_industry_desc:0 "Many products can be produced in our nation. So let's expand production of it."
+IRE_root_steel_works:0 "[Root.GetAdjective] Steel"
+IRE_root_steel_works_desc:0 "Have we digged the whole country looking for steel yet? No, so let's do it!"
+IRE_subside_our_farmers:0 "Subside Our Farmers"
+IRE_subside_our_farmers_desc:0 "Many of our farmers could use some help to expand their farms. If we did it, that would be great for the growth of the countryside."
+IRE_expand_university:0 "Fund The University Of [Root.Capital.GetName]"
+IRE_expand_university_desc:0 "To expand our research we must expand IREfunding of the [Root.Capital.GetName] university."
+IRE_housing_program:0 "Housing Program"
+IRE_housing_program_desc:0 "Many people in our country are too poor to be able to afford a house. To fix this we will make some cheap houses for these people. "
+IRE_modern_construction_methods:0 "Modern Construction Methods"
+IRE_modern_construction_methods_desc:0 "Our construction tools are mostly outdated. If we want to create a big and strong economy, we must invest in modernising our tools."
